# libaaxopenal

./: .gitignore  CMakeLists.txt  COPYING  ChangeLog  README  description
CMakeModules/: CPack_Defaults.cmake  CPack_Modules.cmake  FindAAX.cmake  NSIS.template.in
admin/debian/: aax.conf.in  conffiles  postinst  postrm
base/: buffers.c  buffers.h  dlsym.c  dlsym.h  geometry.h  logging.c  logging.h  threads.c  threads.h  types.c  types.h
debian/: .gitignore  copyright
docs/: AAX_source_distance_delay.txt  ALC_EXT_ASA.txt  ALC_SOFT_HRTF.txt  ALX_SOFT_midi_inetrface  AL_SOFT_block_alignment.txt
include/: config.h.in
include/AL/: al.h  alc.h  alcext.h  alext.h  efx-presets.h  efx.h
src/: aax_support.c  aax_support.h  alBuffer.c  alBuffer_template.c  alCapture.c  alContext.c  alContext_ASA.c  alContext_template.c  alListener.c  alListener_template.c  alSource.c  alSource_template.c  alState.c  alState_template.c  api.c  api.h
test/: CMakeLists.txt  alcinfo.c  altestcone.c  altestdistance.c  altesterrors.c  altestleftright.c  altestlistener3d.c  altestloopback.c  altestlooping.c  altestmixer.c  altestmono3d.c  altestmono3d_lowpass.c  altestmono3d_multi.c  altestmono3d_reverb.c  altestmulticontext.c  altestpitchvolume.c  altestqueue.c  alteststream.c  alteststrings.c  altestupdown.c  driver.c  driver.h  testcapture.c  testcone.c  testdistance.c  testleftright.c  testlistener3d.c  testloopback.c  testlooping.c  testmixer.c  testmono3d.c  testmono3d_lowpass.c  testmono3d_multi.c  testmono3d_reverb.c  testmulticontext.c  testpitchvolume.c  testqueue.c  testsource.c  teststereo.c  teststereo_highpass.c  (+7 more)
test/altest/: altest.c
