
LINK_DIRECTORIES(${CMAKE_BINARY_DIR})

SET( DRIVER_OBJS
     driver.c
     wavfile.c
   )

SET(LIBALDRIVER aldriver)
SET(LIBTYPE STATIC)
ADD_LIBRARY(${LIBALDRIVER} ${LIBTYPE} ${DRIVER_OBJS})

FUNCTION(CREATE_TEST TEST_NAME FILE_NAME)
    ADD_EXECUTABLE(${TEST_NAME} ${FILE_NAME}.c)
    TARGET_LINK_LIBRARIES(${TEST_NAME} ${LIBALDRIVER} ${LIBBASE} ${LIBOPENAL})
    SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES
            COMPILE_DEFINITIONS  "SRC_PATH=\"${PROJECT_SOURCE_DIR}/sounds\"")
ENDFUNCTION()

FUNCTION(CREATE_ALTEST TEST_NAME)
    CREATE_TEST(al${TEST_NAME} ${TEST_NAME})
ENDFUNCTION()


CREATE_TEST(alcinfo alcinfo)
INSTALL(TARGETS alcinfo
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT Applications
)

CREATE_ALTEST(testmixer)
CREATE_ALTEST(testcapture)
CREATE_ALTEST(testloopback)
CREATE_ALTEST(testcone)
CREATE_ALTEST(testdistance)
CREATE_ALTEST(testerrors)
CREATE_ALTEST(testleftright)
CREATE_ALTEST(testlistener3d)
CREATE_ALTEST(testlooping)
CREATE_ALTEST(testmono3d)
CREATE_ALTEST(testmono3d_lowpass)
CREATE_ALTEST(testmono3d_multi)
CREATE_ALTEST(testmono3d_reverb)
CREATE_ALTEST(testmulticontext)
CREATE_ALTEST(testpitchvolume)
CREATE_ALTEST(testqueue)
CREATE_ALTEST(testsource)
CREATE_ALTEST(teststereo)
CREATE_ALTEST(teststereo_highpass)
CREATE_ALTEST(teststereo_lowpass)
CREATE_ALTEST(teststereo_reverb)
CREATE_ALTEST(teststream)
CREATE_ALTEST(teststrings)
CREATE_ALTEST(testupdown)

