
LINK_DIRECTORIES(${CMAKE_BINARY_DIR})

SET( DRIVER_OBJS
     driver.c
     wavfile.c
   )

SET(LIBALDRIVER aldriver)
SET(LIBTYPE STATIC)
ADD_LIBRARY(${LIBALDRIVER} ${LIBTYPE} ${DRIVER_OBJS})

FUNCTION(CREATE_TEST TEST_NAME FILE_NAME)
    ADD_EXECUTABLE(${TEST_NAME} ${FILE_NAME}.c)
    TARGET_LINK_LIBRARIES(${TEST_NAME} ${LIBALDRIVER} ${LIBBASE} ${LIBOPENAL})
    SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES
            COMPILE_DEFINITIONS  "SRC_PATH=\"${PROJECT_SOURCE_DIR}/sounds\"")
ENDFUNCTION()

FUNCTION(CREATE_ALTEST TEST_NAME)
    CREATE_TEST(${TEST_NAME} ${TEST_NAME})
ENDFUNCTION()


CREATE_TEST(alcinfo alcinfo)
INSTALL(TARGETS alcinfo
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT Applications
)

CREATE_ALTEST(altestmixer)
CREATE_ALTEST(altestcapture)
CREATE_ALTEST(altestloopback)
CREATE_ALTEST(altestcone)
CREATE_ALTEST(altestdistance)
CREATE_ALTEST(altesterrors)
CREATE_ALTEST(altestleftright)
CREATE_ALTEST(altestlistener3d)
CREATE_ALTEST(altestlooping)
CREATE_ALTEST(altestmono3d)
CREATE_ALTEST(altestmono3d_lowpass)
CREATE_ALTEST(altestmono3d_multi)
CREATE_ALTEST(altestmono3d_reverb)
CREATE_ALTEST(altestmulticontext)
CREATE_ALTEST(altestpitchvolume)
CREATE_ALTEST(altestqueue)
CREATE_ALTEST(altestsource)
CREATE_ALTEST(alteststereo)
CREATE_ALTEST(alteststereo_highpass)
CREATE_ALTEST(alteststereo_lowpass)
CREATE_ALTEST(alteststereo_reverb)
CREATE_ALTEST(alteststream)
CREATE_ALTEST(alteststrings)
CREATE_ALTEST(altestupdown)

